@@ -7,12 +7,27 @@ the version your are updating from is done.
 + Add log file path constant to config file.
   See config.default.php for LOGFILE constant. Add it to your local config.php
 + Update your tables with the following SQL statements. Replace #REPLACE_ME# with your current table prefix.
+
 ALTER TABLE `#REPLACE_ME#_link` ADD INDEX (`created`);
 ALTER TABLE `#REPLACE_ME#_link` ADD INDEX (`status`);
 ALTER TABLE `#REPLACE_ME#_categoryrelation` ADD INDEX (`categoryid`);
 ALTER TABLE `#REPLACE_ME#_tagrelation` ADD UNIQUE `tagid` (`linkid`, `tagid`);
 ALTER TABLE `#REPLACE_ME#_tagrelation` ADD INDEX (`linkid`);
 ALTER TABLE `#REPLACE_ME#_category` ADD INDEX (`name`);
+
+ALTER TABLE `#REPLACE_ME#_category` DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_520_ci;
+ALTER TABLE `#REPLACE_ME#_categoryrelation` DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_520_ci;
+ALTER TABLE `#REPLACE_ME#_link` DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_520_ci;
+ALTER TABLE `#REPLACE_ME#_tag` DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_520_ci;
+ALTER TABLE `#REPLACE_ME#_tagrelation` DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_520_ci;
+ALTER TABLE `#REPLACE_ME#_tag` CHANGE `name` `name` VARCHAR(64) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `link` `link` MEDIUMTEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `description` `description` VARCHAR(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `title` `title` VARCHAR(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `image` `image` VARCHAR(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `hash` `hash` CHAR(32) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_link` CHANGE `search` `search` TEXT CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
+ALTER TABLE `#REPLACE_ME#_category` CHANGE `name` `name` VARCHAR(128) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_520_ci NOT NULL;
 
 ## version 2.8.1 - Deathwind
 + Added debug setting into config. See config.default.php for DEBUG constant.
