@@ -1,10 +1,11 @@
 version 2.x - Dragon Chapel ()
 
 	+ Added LOGFILE and QUERY_DEBUG const to config.php. See update.txt for more details
+	Updated DB table charsets. Needs manuall DB updates. See update.txt file.
     * Fixed URL handling at creation
 	+ Improved DB queries.
 	+ Add top 5 tag or category relation stats in the tag and category overview
-	+ Update license to GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
+	+ Updated license to GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
 	+ Updated error logging and try/catch for mysql
 	+ Updated from https://github.com/druidfi/mysqldump-php to https://github.com/ifsnop/mysqldump-php since develop
 	  resumed. Version mysqldump-php v2.11
